--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "eras-time",
   "main": "eras-time.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.9.0"
+    "polymer": "Polymer/polymer#^1.9.0",
+    "iron-flex-layout": "1",
+    "paper-button": "1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
